--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -2,6 +2,9 @@ doctype html
 html
   head
     title My App
+    
+    // TODO: Serve local copy
+    script(src="https://cdn.socket.io/socket.io-1.3.7.js")
   body
     #root!= content
     script(src='/dist/bundle.js')
